<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TeacherActivity">

    <EditText
        android:id="@+id/editTextCourse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Course Name"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/editTextLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Classroom Location"
        android:inputType="textPersonName"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <Spinner
        android:id="@+id/spinWeekDay1"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="112dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewStartDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="400dp"
        android:text="Start day"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinWeekDay3"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEndTime2"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="End Time"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEndTime1"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="End Time"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEndDay"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEndTime4"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="End Time"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etStartTime4"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="244dp"
        android:ems="10"
        android:hint="Start Time"
        android:inputType="time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etStartTime5"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="288dp"
        android:ems="10"
        android:hint="Start Time"
        android:inputType="time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEndTime5"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginTop="288dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="End Time"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinWeekDay5"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="288dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinWeekDay4"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="244dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEndTime3"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="End Time"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etStartTime1"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="112dp"
        android:ems="10"
        android:hint="Start Time"
        android:inputType="time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinWeekDay2"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="156dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etStartTime3"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:hint="Start Time"
        android:inputType="time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextStartDay"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="360dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewEndDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="20dp"
        android:text="End day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etStartTime2"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="156dp"
        android:ems="10"
        android:hint="Start Time"
        android:inputType="time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addClassBtn"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_weight="4"
        android:text="Add Class"
        android:textColor="@color/blue"
        android:background="@drawable/button_outline"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>
