...
    android:layout_height="0dp"
    android:layout_weight="0.1"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="horizontal">

    <Button
        android:id="@+id/buttonAddCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:text="Add Class"
        android:textColor="@color/blue"
        android:background="@drawable/button_outline">
...
